# Django_review

./: .gitignore  manage.py  pyproject.toml  test.sh
.github/workflows/: ci.yml
Sparta/: asgi.py  settings.py  urls.py  wsgi.py
Sparta/test/: test_view.py
