[tool.poetry]
name = "sparta"
version = "0.1.0"
description = ""
authors = ["Yangs1s <sungjinahim@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "4.0"
django-ninja = "0.16.1"
black = "21.12b0"
django-stubs = "1.9.0"
mypy = "0.931"
isort = "5.10.1"
PyMySQL = "1.0.2"
types-PyMySQL = "1.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = 3.9
strict = true

#migrations와 manage.py 딱히 수정할 일이 없기에 에러검출을 무시함.
[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "manage"
ignore_errors = true
###########################################################
[tool.django-stubs]
django_settings_module = "Sparta.settings"

# black과 isort가 서로 호환되도록 설정해주는
[tool.isort]
profile="black"